...
    navigationItem.rightBarButtonItems = [
      UIBarButtonItem(image: App.filterFavoritesLines ? #imageLiteral(resourceName: "filter") : #imageLiteral(resourceName: "filterEmpty"),
                      style: UIBarButtonItem.Style.plain,
                      target: self,
                      action: #selector(self.toggleFilterFavoritesLines),
                      accessbilityLabel: "Filter favorites lines".localized),
      UIBarButtonItem(image: App.favoritesStops.contains(stop!.appId) ? #imageLiteral(resourceName: "star") : #imageLiteral(resourceName: "starEmpty"),
                      style: UIBarButtonItem.Style.plain,
                      target: self,
                      action: #selector(self.setFavorite),
                      accessbilityLabel: App.favoritesStops.contains(stop!.appId) ?
                        "Unmark this stop as favorite".localized :
                        "Mark this stop as favorite".localized),
      UIBarButtonItem(image: #imageLiteral(resourceName: "pinMapNavBar"),
                      style: UIBarButtonItem.Style.plain,
                      target: self,
                      action: #selector(self.showMap),
                      accessbilityLabel: "Show map".localized),
      UIBarButtonItem(image: #imageLiteral(resourceName: "reloadNavBar"),
                      style: UIBarButtonItem.Style.plain,
                      target: self,
                      action: #selector(self.reload),
                      accessbilityLabel: "Reload departures".localized)
    ]
  }
...
